* Spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,10 @@ h2 {
 }
 
 @media (min-width: 960px) {
+  h1 {
+    font-size: 2.5em;
+  }
+
   h2 {
     font-size: 2em;
   }
@@ -291,17 +295,21 @@ p {
 
 
 @media (min-width: 960px) {
-  .header__logo img {
-    height: auto;
+  .header {
+    margin: 60px 0;
   }
 
-  .header__nav a {
-    font-size: 1em;
-  }
+    .header__logo img {
+      height: auto;
+    }
 
-  .header__nav a + a {
-    margin-left: 30px;
-  }
+    .header__nav a {
+      font-size: 1em;
+    }
+
+    .header__nav a + a {
+      margin-left: 30px;
+    }
 }
 
 
